code/despliegue-kafka/kafka-tfm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kafka-ingress
spec:
  rules:
  -host: kafka.ikcloud.es
  http:
    paths:
    - path: /
    backend:
      serviceName: kafka-service
      servicePort: 9092
